# scope

./: .bumpversion.cfg  .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile.amd64.cuda90  Dockerfile.ppc64le.centos7  README.md  RELEASE.md  amd64.cuda100.Dockerfile  amd64.cuda75.Dockerfile  amd64.cuda80.Dockerfile  amd64.cuda92.Dockerfile  cuda.repo  git_revision.cpp.in  netlify.toml  nohunter.Dockerfile  numa-separate-process.sh  ppc64le.cuda80.Dockerfile  ppc64le.cuda92.Dockerfile  run-benchmarks.sh  run_cudnn.sh  smt_off.sh
ci/: build.sh  build_and_push_docker.sh  install_cmake.sh  install_rai.sh
ci/rai/: .rai_profile  rai_build.cuda80.yml  rai_build.cuda92.yml
cmake/: clang5.toolchain
cmake/Hunter/: config.cmake
cmake/modules/: FindKernelHeaders.cmake  FindMxNet.cmake  FindOpenBLAS.cmake  Findcub.cmake  Findnuma.cmake  ScopeAddLibrary.cmake  ScopeFatal.cmake  ScopeStatus.cmake  ScopeWarning.cmake  TargetIncludeScopeDirectories.cmake  TargetLinkScopeLibraries.cmake
dockerfiles/: Dockerfile.ppc64le.centos7
docs/: README.md  _navbar.md  benchmark_descriptions.md  build_without_hunter.md  compiler.md  docker.md  fresh_ubuntu.md  hunter_problems.md  index.html  new_benchmark.md  new_scope.md  sw.js  tools.md  travis_problems.md
docs/assets/: occa.css  occa.js
enable/: README.md
example_scope/: CMakeLists.txt  README.md
example_scope/src/example/: example.cpp  sugar.cmake
results/: README.md  cudamemcpy.m  cudamemcpy.nb  daxpy.m  daxpy.nb  daxpy_plot.nb  plot.m  plot.nb  sgemm.m  sgemm.nb  sgemm_plot.m  sgemm_plot.nb  tangram_fix.nb
results/cudnn/: ip-172-31-26-89.machine  ip-172-31-48-155.machine  ip-172-31-60-70.machine  pascal_conv_fwd.csv  pascal_conv_fwd.json  tesla.ncsa.illinois.edu.machine  volta_conv_fwd.csv  volta_conv_fwd.json  volta_conv_fwd_get_algo.json
results/cudnn/minsky1/: minsky1_cudnn_activation_bwd.csv  minsky1_cudnn_activation_bwd.json  minsky1_cudnn_activation_fwd.csv  minsky1_cudnn_activation_fwd.json  minsky1_cudnn_batchnorm_bwd.csv  minsky1_cudnn_batchnorm_bwd.json  minsky1_cudnn_batchnorm_fwd.csv  minsky1_cudnn_batchnorm_fwd.json  minsky1_cudnn_conv_bwd_bias.csv  (+21 more)
results/raw_data/: impact2.json  ip-172-31-42-188.json  ip-172-31-48-27.json  layers_v100.json  minsky1.json  minsky2-1.json  whatever.json
src/: cblas_daxpy.cpp  cblas_sgemm.cpp  commandlineflags.cpp  config.hpp  config.hpp.in  cublas_sgemm.cpp  cuda_alexnet_fused.cu  cuda_convolution.cu  cuda_info.hpp  cuda_launch.cu  cuda_memcpy.cpp  cuda_reduce.cu  cuda_sgemm.cu  cuda_sgemm_basic.cu  cuda_sgemm_tiled.cu  cuda_sleep.cu  cuda_vectoradd.cu  cudamalloc.cpp  cudamemcpy.cpp  daxpy.cpp  flags.cpp  flags.hpp  init.cpp  init.hpp  init_cuda.hpp  logger.cpp  logger.hpp  main.cpp  mxnet_ndarray_reader.hpp  sgemm.cpp  sugar.cmake  utils.hpp  utils_cublas.hpp  utils_cuda.hpp  utils_sgemm.hpp  utils_vectoradd.hpp
src/Tangram_axpy/: args.hpp  cuda.cu  sugar.cmake
src/atomic/: sugar.cmake
src/axpy/: args.hpp  clbas.cpp  sugar.cmake  utils.hpp
src/conv/: args.hpp  cudnn.cpp  sugar.cmake  utils.hpp
src/cuda-numa/: args.hpp  gpu_to_gpu_nopeer.cpp  gpu_to_host.cpp  gpu_to_pinned.cpp  host_to_gpu.cpp  pinned_to_gpu.cpp  sugar.cmake
src/example/: example.cpp  sugar.cmake
src/framework/: sugar.cmake
src/gemm/: args.hpp  cblas.cpp  cublas.cpp  cuda.cu  cudnn.cpp  cutlass.cu  sugar.cmake  utils.hpp  utils_sgemm.hpp
src/gemv/: sugar.cmake
src/init/: cuda.cpp  cuda.hpp  cudnn.cpp  flags.cpp  init.cpp  init.hpp  init_cuda.hpp  logger.cpp  numa.cpp  numa.hpp  sugar.cmake
src/io/: mxnet_ndarray_reader.cpp  sugar.cmake
src/launch/: args.hpp  cuda.cu  cuda_launch.cu  sugar.cmake
src/layer/: README.md  activation_bwd.cpp  activation_fwd.cpp  args.hpp  batchnorm_bwd.cpp  batchnorm_fwd.cpp  conv_bias_activation_fwd.cpp  conv_bwd.cpp  conv_bwd_bias.cpp  conv_bwd_data.cpp  conv_bwd_filter.cpp  conv_fwd.cpp  conv_fwd_get_algo.cpp  ctc_loss.cpp  dropout_bwd..cpp  dropout_bwd.cpp  dropout_fwd.cpp  generated_benchmarks.hpp  helper.hpp  layer_benchmarks.hpp  pooling_bwd.cpp  pooling_fwd.cpp  softmax_bwd.cpp  softmax_fwd.cpp  sugar.cmake  utils.hpp
src/layers/: activation.cu  col2im.cu  im2col.cu  sugar.cmake
src/lock/: args.hpp  lock.cpp  sugar.cmake
src/memcpy/: args.hpp  cuda_memcpy.cpp  gpu_to_gpu.cpp  gpu_to_gpu_peer.cpp  gpu_to_host.cpp  gpu_to_pinned.cpp  host_to_gpu.cpp  pinned_to_gpu.cpp  sugar.cmake
src/memcpy-duplex/: args.hpp  gpu_gpu.cpp  sugar.cmake
src/network/: cuda_alexnet_fused.cu  sugar.cmake
src/numa/: args.hpp  numa_to_numa.cpp  ops.cpp  ops.hpp  rd.cpp  sugar.cmake  threads.cpp  wr.cpp
src/numa-um/: args.hpp  gpu_to_gpu.cu  gpu_to_host.cu  host_to_gpu.cu  sugar.cmake
src/numamemcpy/: args.hpp  gpu_to_gpu_nopeer.cpp  gpu_to_host.cpp  gpu_to_pinned.cpp  gpu_to_wc.cpp  host_to_gpu.cpp  host_to_pinned.cpp  pinned_to_gpu.cpp  sugar.cmake  wc_to_gpu.cpp
src/numamemcpy-duplex/: args.hpp  gpu_to_host.cpp  gpu_to_pinned.cpp  host_to_gpu.cpp  host_to_gpu.cpp.save  pinned_to_gpu.cpp  sugar.cmake
src/numaum-coherence/: args.hpp  gpu_threads.cu  gpu_to_host.cu  gpu_to_host_threads.cu  host_to_gpu.cu  sugar.cmake
src/numaum-latency/: args.hpp  gpu_to_gpu.cu  gpu_to_host.cu  host_to_gpu.cu  sugar.cmake
src/numaum-prefetch/: args.hpp  gpu_to_host.cpp  host_to_gpu.cpp  sugar.cmake
src/reduction/: cuda_reduce.cu  sugar.cmake
src/scope/: sugar.cmake
src/stream/: cuda_sleep.cu  sugar.cmake
src/tensor/: details.hpp  sugar.cmake  tensor.hpp
src/um-coherence/: gpu_to_gpu.cu  sugar.cmake
src/um-latency/: gpu_to_gpu.cu  sugar.cmake
src/um-prefetch/: gpu_to_gpu.cpp  sugar.cmake
src/utils/: b5_papi.cpp  b5_papi.hpp  benchmark.hpp  commandlineflags.hpp  compat.hpp  cuda.hpp  cudnn.hpp  defer.hpp  error.hpp  flags.cpp  mpl.hpp  nccl.hpp  numa.hpp  nvptx.hpp  omp.hpp  papi.cpp  sugar.cmake  unused.hpp  utils.hpp
src/vectoradd/: args.hpp  cuda.cu  cuda_vectoradd.cu  sugar.cmake  utils_vectoradd.hpp
tools/: generate_ispass19.sh  generate_runscripts.py  generate_sugar_files.py
(+104 files in other folders)
